fixed layout align

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -2,3 +2,8 @@
     height: 288px;
     width: 288px;
 }
+
+.project-card {
+    width: 290px;
+    margin: auto;
+}
