--- a/src/containers/About/About.css
+++ b/src/containers/About/About.css
@@ -6,6 +6,8 @@
     height: 170px;
     width: 170px;
     margin-bottom: 25px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .about-info-title {
